src/test/ui/borrowck/issue-41962.stderr
error[E0382]: use of partially moved value: `maybe`
  --> $DIR/issue-41962.rs:15:30
   |
15 |         if let Some(thing) = maybe {
   |                     -----    ^^^^^ value used here after move
   |                     |
   |                     value moved here because it has type `std::vec::Vec<bool>`, which does not implement the `Copy` trait

error[E0382]: use of moved value: `(maybe as std::prelude::v1::Some).0`
  --> $DIR/issue-41962.rs:15:21
   |
15 |         if let Some(thing) = maybe {
   |                     ^^^^^ value moved here in previous iteration of loop because it has type `std::vec::Vec<bool>`, which does not implement the `Copy` trait

error: aborting due to 2 previous errors

